Fixed arrow lignup on mobile size

--- a/css/styles.css
+++ b/css/styles.css
@@ -282,6 +282,7 @@ svg {
 #membership {
   display: flex;
     flex-direction: column;
+    border-top: 2px solid grey;
 }
 .members-container {
   display: flex;
@@ -297,7 +298,7 @@ svg {
   width: 100%;
   float: right;
   height: auto;
-  padding-left: 15;
+  padding-left: 20;
   border-right: 5;
   border-right-color: lightgrey;
   border-top-color: rgb(145, 143, 143);
@@ -338,12 +339,13 @@ svg {
 
 .member-wrapper {
   width: 100%;
+
   padding: 20px 0;
   border-bottom: 1px solid lightgrey;
 }
 
 .member-wrapper_profile {
-  float: left;
+  padding-left: 2px;
 }
 
 .member-wrapper_profile img {
@@ -381,6 +383,7 @@ svg {
 }
 
 .arrow {
+  margin: 0;
   font-size: 32px;
 }
 
@@ -490,7 +493,7 @@ input.message-user {
 
 .btn-bar button {
   margin-top: 20px;
-  width: 450px;
+  width: 300px;
   padding: 10px;
   border-radius: 0.3em;
   background-color: rgba(99, 99, 196, 0.8);
@@ -527,14 +530,13 @@ width: 100%;
   display: flex;
   justify-content: space-between;
   align-content: center;
-  width: 90%;
+  width: 50%;
   padding-top: 53px;
   margin-left: 0;
 }
 
 .messageUserContainer {
   width: 100%;
-
   padding-left: 2px;
   border-right: 2px;
   border-right-color: grey;
